Задачи: 1.Создание товара в виде иерархической структуры